Shapes editor mode

--- a/Photo Editor/PhotoEditorViewController.xib
+++ b/Photo Editor/PhotoEditorViewController.xib
@@ -9,11 +9,6 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="icomoon.ttf">
-            <string>icomoon</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PhotoEditorViewController" customModule="iOSPhotoEditor" customModuleProvider="target">
             <connections>
@@ -32,12 +27,15 @@
                 <outlet property="imageView" destination="5rw-9v-ExQ" id="5lP-en-DGc"/>
                 <outlet property="imageViewHeightConstraint" destination="DdY-qb-dfp" id="ZY9-Em-cs4"/>
                 <outlet property="saveButton" destination="mW4-Jz-sic" id="1Uj-nU-EU1"/>
+                <outlet property="shapeCollectionView" destination="HIA-tG-hPq" id="VWq-Xr-rox"/>
+                <outlet property="shapePickerView" destination="yN1-01-5G7" id="AyY-h5-NST"/>
                 <outlet property="shapeToolsPickerView" destination="13J-gY-XUc" id="zS5-s9-0vn"/>
                 <outlet property="shapesButton" destination="3Iw-H1-KLE" id="ZAc-6L-OEH"/>
                 <outlet property="shareButton" destination="zlw-H0-WcJ" id="OZv-z0-8s8"/>
                 <outlet property="textButton" destination="0wH-LJ-SyD" id="ofN-bp-ZaE"/>
                 <outlet property="topGradient" destination="rLz-36-0xz" id="0Yd-em-MMy"/>
                 <outlet property="topToolbar" destination="3MS-N5-3xY" id="kzY-Ga-SoQ"/>
+                <outlet property="undoButton" destination="0KQ-47-ijQ" id="bQL-ca-lDS"/>
                 <outlet property="view" destination="HPk-Bg-V0q" id="eF4-Ac-Nav"/>
             </connections>
         </placeholder>
@@ -73,6 +71,26 @@
                         <constraint firstItem="5rw-9v-ExQ" firstAttribute="leading" secondItem="S1Y-ZS-dct" secondAttribute="leading" id="v73-ro-BkR"/>
                     </constraints>
                 </view>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0KQ-47-ijQ">
+                    <rect key="frame" x="8" y="20" width="41" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="54" id="QuF-4a-hf2"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                    <size key="titleShadowOffset" width="1" height="0.0"/>
+                    <state key="normal" title="Undo">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.1532266695" colorSpace="calibratedRGB"/>
+                    </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="QuF-4a-hf2"/>
+                        </mask>
+                    </variation>
+                    <connections>
+                        <action selector="undoButtonDidTouchInside:" destination="-1" eventType="touchUpInside" id="cwg-EM-FcU"/>
+                    </connections>
+                </button>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KxU-y4-Jwh">
                     <rect key="frame" x="327" y="18" width="40" height="32"/>
                     <constraints>
@@ -267,21 +285,21 @@
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yAt-sK-1nK">
                     <rect key="frame" x="162.5" y="605" width="50" height="50"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sqh-uS-U1m">
-                            <rect key="frame" x="25" y="25" width="0.0" height="0.0"/>
-                            <fontDescription key="fontDescription" name="icomoon" family="icomoon" pointSize="30"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                            <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.1532266695" colorSpace="calibratedRGB"/>
-                            <size key="shadowOffset" width="1" height="0.0"/>
-                        </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trash-50" translatesAutoresizingMaskIntoConstraints="NO" id="flA-0Z-43s">
+                            <rect key="frame" x="12.5" y="12.5" width="25" height="25"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="25" id="81x-ss-XN1"/>
+                                <constraint firstAttribute="height" constant="25" id="qt3-Ag-bUX"/>
+                            </constraints>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="Cbh-qN-Nr4"/>
-                        <constraint firstItem="sqh-uS-U1m" firstAttribute="centerY" secondItem="yAt-sK-1nK" secondAttribute="centerY" id="ZDd-OE-AiH"/>
-                        <constraint firstAttribute="height" constant="50" id="iud-MD-vZ2"/>
-                        <constraint firstItem="sqh-uS-U1m" firstAttribute="centerX" secondItem="yAt-sK-1nK" secondAttribute="centerX" id="vx8-XT-NVx"/>
+                        <constraint firstItem="flA-0Z-43s" firstAttribute="centerY" secondItem="yAt-sK-1nK" secondAttribute="centerY" id="Gea-YT-LOy"/>
+                        <constraint firstItem="flA-0Z-43s" firstAttribute="centerX" secondItem="yAt-sK-1nK" secondAttribute="centerX" id="bse-lH-cfd"/>
+                        <constraint firstAttribute="height" constant="50" id="uEA-oi-JSx"/>
                     </constraints>
                 </view>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cy8-ap-fH9" userLabel="Color Picker">
@@ -310,16 +328,16 @@
                         <constraint firstAttribute="trailing" secondItem="GaQ-XR-asZ" secondAttribute="trailing" id="ZAL-PE-sPi"/>
                     </constraints>
                 </view>
-                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="13J-gY-XUc" userLabel="Shape tools">
-                    <rect key="frame" x="0.0" y="617" width="375" height="50"/>
+                <view hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yN1-01-5G7" userLabel="Shape Picker">
+                    <rect key="frame" x="0.0" y="567" width="375" height="50"/>
                     <subviews>
-                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mPr-tV-LUl">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HIA-tG-hPq">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="40" id="6XX-am-Hpi"/>
+                                <constraint firstAttribute="height" constant="50" id="ngM-Gj-MsA"/>
                             </constraints>
-                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Nxe-FH-EIK">
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dsC-PS-Krh">
                                 <size key="itemSize" width="50" height="50"/>
                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -328,11 +346,18 @@
                             <cells/>
                         </collectionView>
                     </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="WYu-KI-jQf"/>
+                        <constraint firstItem="HIA-tG-hPq" firstAttribute="leading" secondItem="yN1-01-5G7" secondAttribute="leading" id="bRd-ZL-iwq"/>
+                        <constraint firstAttribute="trailing" secondItem="HIA-tG-hPq" secondAttribute="trailing" id="uCw-8A-nPF"/>
+                        <constraint firstItem="HIA-tG-hPq" firstAttribute="top" secondItem="yN1-01-5G7" secondAttribute="top" id="uYY-NK-2dG"/>
+                    </constraints>
+                </view>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="13J-gY-XUc" userLabel="Shape tools">
+                    <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="mPr-tV-LUl" secondAttribute="trailing" id="09n-6c-EKS"/>
-                        <constraint firstItem="mPr-tV-LUl" firstAttribute="top" secondItem="13J-gY-XUc" secondAttribute="top" id="ppy-i3-jnr"/>
-                        <constraint firstItem="mPr-tV-LUl" firstAttribute="leading" secondItem="13J-gY-XUc" secondAttribute="leading" id="u0i-bu-4mC"/>
                         <constraint firstAttribute="height" constant="50" id="wAd-7b-1Qq"/>
                     </constraints>
                 </view>
@@ -342,18 +367,22 @@
                 <constraint firstItem="87h-1G-t5q" firstAttribute="leading" secondItem="HPk-Bg-V0q" secondAttribute="leading" id="0ft-JY-szV"/>
                 <constraint firstItem="Cy8-ap-fH9" firstAttribute="centerX" secondItem="HPk-Bg-V0q" secondAttribute="centerX" id="24Z-2f-Tyk"/>
                 <constraint firstItem="S1Y-ZS-dct" firstAttribute="leading" secondItem="HPk-Bg-V0q" secondAttribute="leading" id="2tC-2e-oA6"/>
+                <constraint firstItem="0KQ-47-ijQ" firstAttribute="leading" secondItem="w3v-aW-xsN" secondAttribute="leading" constant="8" id="3fc-cW-DTQ"/>
                 <constraint firstItem="Cy8-ap-fH9" firstAttribute="leading" secondItem="HPk-Bg-V0q" secondAttribute="leading" id="6eK-mF-0OL"/>
                 <constraint firstItem="3MS-N5-3xY" firstAttribute="top" secondItem="w3v-aW-xsN" secondAttribute="top" id="Fj6-PW-wbF"/>
                 <constraint firstItem="KxU-y4-Jwh" firstAttribute="centerY" secondItem="3MS-N5-3xY" secondAttribute="centerY" id="LrJ-sA-d89"/>
                 <constraint firstAttribute="trailing" secondItem="3MS-N5-3xY" secondAttribute="trailing" id="M86-Ia-XcZ"/>
+                <constraint firstItem="Cy8-ap-fH9" firstAttribute="top" secondItem="yN1-01-5G7" secondAttribute="bottom" id="Qje-aE-xnc"/>
                 <constraint firstItem="rLz-36-0xz" firstAttribute="top" secondItem="HPk-Bg-V0q" secondAttribute="top" id="RYD-1T-XNJ"/>
                 <constraint firstAttribute="trailing" secondItem="ZGa-1B-gkO" secondAttribute="trailing" id="SbH-L6-vj9"/>
+                <constraint firstItem="0KQ-47-ijQ" firstAttribute="top" secondItem="w3v-aW-xsN" secondAttribute="top" id="VYq-wP-MTh"/>
                 <constraint firstItem="yAt-sK-1nK" firstAttribute="centerX" secondItem="HPk-Bg-V0q" secondAttribute="centerX" id="Viz-8c-pzk"/>
                 <constraint firstAttribute="bottom" secondItem="87h-1G-t5q" secondAttribute="bottom" id="XH4-oO-47L"/>
                 <constraint firstItem="ZGa-1B-gkO" firstAttribute="leading" secondItem="HPk-Bg-V0q" secondAttribute="leading" id="YYk-Vg-obo"/>
                 <constraint firstAttribute="bottom" secondItem="13J-gY-XUc" secondAttribute="bottom" id="Yi8-MT-Hub"/>
                 <constraint firstItem="13J-gY-XUc" firstAttribute="trailing" secondItem="w3v-aW-xsN" secondAttribute="trailing" id="a1E-cJ-lxM"/>
                 <constraint firstItem="13J-gY-XUc" firstAttribute="leading" secondItem="w3v-aW-xsN" secondAttribute="leading" id="acd-jw-rTz"/>
+                <constraint firstItem="yN1-01-5G7" firstAttribute="leading" secondItem="w3v-aW-xsN" secondAttribute="leading" id="c7a-Gf-1zz"/>
                 <constraint firstAttribute="trailing" secondItem="Cy8-ap-fH9" secondAttribute="trailing" id="dlF-iN-Gjg"/>
                 <constraint firstAttribute="trailing" secondItem="S1Y-ZS-dct" secondAttribute="trailing" id="jwU-EC-jaR"/>
                 <constraint firstAttribute="trailing" secondItem="87h-1G-t5q" secondAttribute="trailing" id="kaD-bR-ZZt"/>
@@ -364,6 +393,7 @@
                 <constraint firstItem="rLz-36-0xz" firstAttribute="leading" secondItem="HPk-Bg-V0q" secondAttribute="leading" id="orL-eE-RPq"/>
                 <constraint firstItem="w3v-aW-xsN" firstAttribute="trailing" secondItem="KxU-y4-Jwh" secondAttribute="trailing" constant="8" id="tqd-Is-hux"/>
                 <constraint firstAttribute="bottom" secondItem="ZGa-1B-gkO" secondAttribute="bottom" id="uXH-MJ-Z8t"/>
+                <constraint firstItem="yN1-01-5G7" firstAttribute="trailing" secondItem="w3v-aW-xsN" secondAttribute="trailing" id="uvm-Zj-UmP"/>
                 <constraint firstItem="S1Y-ZS-dct" firstAttribute="centerX" secondItem="HPk-Bg-V0q" secondAttribute="centerX" id="uyk-kx-vrC"/>
                 <constraint firstItem="3MS-N5-3xY" firstAttribute="leading" secondItem="HPk-Bg-V0q" secondAttribute="leading" id="zYw-cX-ezI"/>
             </constraints>
@@ -380,6 +410,7 @@
         <image name="metamorphose-50" width="37.5" height="37.5"/>
         <image name="ok-50" width="37.5" height="37.5"/>
         <image name="pencil-50" width="37.5" height="37.5"/>
+        <image name="trash-50" width="37.5" height="37.5"/>
         <image name="type-50" width="37.5" height="37.5"/>
     </resources>
 </document>
